overflow and fixed position for main page

--- a/app/assets/stylesheets/notes/notes.scss
+++ b/app/assets/stylesheets/notes/notes.scss
@@ -114,6 +114,7 @@
   font-size: 12px;
   height: 40px;
   margin-top: 11px;
+  color: #4d4d4d;
 }
 
 .note-words-3 {
@@ -190,6 +191,7 @@
   outline: none;
   border: 0;
   border-top: .8px solid #ccc;
+  width: 100%;
 }
 
 .ql-toolbar.ql-snow {
