--- a/app/assets/stylesheets/user_auth/auth.scss
+++ b/app/assets/stylesheets/user_auth/auth.scss
@@ -313,8 +313,13 @@ h3 span {
   margin-top: -10px;
 }
 
+html {
+  overflow: hidden;
+}
+
 body {
   margin: 0;
+  position: fixed;
 }
 
 #nav-login-container {
